--- a/aerosales/login.html
+++ b/aerosales/login.html
@@ -68,8 +68,8 @@
       }(window, document));
       
     </script>
-    <link media="screen" rel="stylesheet" href="/css/app.css">
-    <script src="/js/app.js"></script>
+    <link media="screen" rel="stylesheet" href="./aerosales/css/app.css">
+    <script src="./aerosales/js/app.js"></script>
   </head>
   <body>
     <div class="login-page">
