--- a/aerosales/new-password.html
+++ b/aerosales/new-password.html
@@ -17,9 +17,9 @@
       	})(window);
       	// load font (woff)
       	var ua = navigator.userAgent,
-      			fontFileUrl = "/fonts/roboto-woff.css";
+      			fontFileUrl = "fonts/roboto-woff.css";
       	if (supportsWoff2) {
-      		fontFileUrl = "/fonts/roboto-woff2.css";
+      		fontFileUrl = "fonts/roboto-woff2.css";
       	}
       	loadFont('custom_fonts', fontFileUrl);
       })()
@@ -28,7 +28,7 @@
       // Storing SVG Sprite in localStorage
       ; (function (window, document) {
       	'use strict';
-      	var file = '/images/svg/svg.svg',
+      	var file = 'images/svg/svg.svg',
       			revision = new Date().getTime();
       	if (!document.createElementNS || !document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect)
       		return true;
@@ -68,8 +68,8 @@
       }(window, document));
       
     </script>
-    <link media="screen" rel="stylesheet" href="/css/app.css">
-    <script src="/js/app.js"></script>
+    <link media="screen" rel="stylesheet" href="css/app.css">
+    <script src="js/app.js"></script>
   </head>
   <body>
     <div class="login-page">
