--- a/aerosales/login.html
+++ b/aerosales/login.html
@@ -99,7 +99,7 @@
                 <div class="input-row"><a class="btn btn-secondary" href="#">join</a><a class="btn btn-primary" href="#">login</a></div>
                 <div class="copyright"><span>Powered by</span>
                   <svg>
-                    <use xlink:href="#logo-asselaero-big"></use>
+                    <use xlink:href="#logo-accelaero-big"></use>
                   </svg>
                 </div>
               </fieldset>
