--- a/aerosales/dashboard.html
+++ b/aerosales/dashboard.html
@@ -444,7 +444,7 @@
                 <td>42</td>
                 <td>51</td>
                 <td>100</td>
-                <td data-attr="add-cell">1500</td>
+                <td data-attr="add-cell" data-total="total-cell">1500</td>
               </tr>
               <tr>
                 <td data-attr="add-cell">YLD</td>
@@ -479,7 +479,7 @@
                 <td>61.6</td>
                 <td>59.7</td>
                 <td>86.7</td>
-                <td data-attr="add-cell">337.4</td>
+                <td data-attr="add-cell" data-total="total-cell">337.4</td>
               </tr>
               <tr>
                 <td data-attr="add-cell">Rev<span>(In Millions)</span></td>
@@ -514,7 +514,7 @@
                 <td>76.5</td>
                 <td>50.9</td>
                 <td>49.0</td>
-                <td data-attr="add-cell">335.2</td>
+                <td data-attr="add-cell" data-total="total-cell">335.2</td>
               </tr>
             </table>
           </div>
